# algorithm-practice

./: .gitignore  CMakeLists.txt  Makefile  build.sh  l94.ts  l96.ts  l98.ts  template.cpp.example
codeforces/: q91743.java
leetcode/: 667.js  l0102.java  l136.java  l1441.java  l1475.ts  l1592.ts  l1608.java  l1619.java  l1620.java  l1652.java  l1700.java  l1773.java  l1790.java  l1800.java  l1822.java  l200.ts  l26.java  l27.java  l279.js  l58.java  l643.java  l645.java  l66.java  l67.java  l670.ts  l764.java  l77.ts  l770.java  l784.java  l801.java  l807.java  l817.java  l856.java  l886.java  l902.java  l904.java  l915.java  l921.java  l927.java
leetcode/bfs/: 529.js  530.js  542.js  l127.js  l200.java  l286.js  l314.ts  l417.js  l547.js  l582.ts  l623.js  l662.js  l672.js  l752.js
leetcode/dfs/: l130.ts  l210.ts
leetcode/dp/: 64.ts  91.ts  l119.java  l1235.java  l1710.java  l300.java  l322.js  l392.java  l516.java  l53.java  l55.ts  l62.ts  l63.ts  l72.java  l769.java  l775.java  l790.java  l792.java  (+4 more)
lib/: leetcode.hpp
luogu/: P1551.java
src/: 215.cpp  l1.cpp  l101.cpp  l102.cpp  l104.cpp  l105.cpp  l108.cpp  l11.cpp  l1137.cpp  l114.cpp  l1143.cpp  l115.cpp  l118.cpp  l121.cpp  l128.cpp  l138.cpp  l139.cpp  l141.cpp  l142.cpp  l146.cpp  l148.cpp  l15.cpp  l152.cpp  l160.cpp  l169.cpp  l17.cpp  l189.cpp  l19.cpp  l198.cpp  l199.cpp  l2.cpp  l20.cpp  l200.cpp  l206.cpp  l207.cpp  l208.cpp  l21.cpp  l22.cpp  l226.cpp  l234.cpp  (+44 more)
test/: test.java  test.ts  test.txt
tree/: l101.ts  l108.ts  l109.ts  l111.ts  l112.ts  l113.java  l144.java  l95.ts  l98.ts
(+64 files in other folders)
